--- a/playbooks/roles/ocp4_workload_stackrox_demo_apps/files/demos/frontend/everything.yaml
+++ b/playbooks/roles/ocp4_workload_stackrox_demo_apps/files/demos/frontend/everything.yaml
@@ -24,7 +24,6 @@ metadata:
   namespace: frontend
   labels:
     app: frontend
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -40,8 +39,7 @@ rules:
   - apiGroups: ["security.openshift.io"]
     resourceNames: ["anyuid"]
     resources: ["securitycontextconstraints"]
-    verbs: ["use']
-
+    verbs: ["use"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
