--- a/playbooks/roles/ocp4_workload_stackrox_demo_apps/files/demos/backend/everything.yaml
+++ b/playbooks/roles/ocp4_workload_stackrox_demo_apps/files/demos/backend/everything.yaml
@@ -100,7 +100,7 @@ rules:
   - apiGroups: ["security.openshift.io"]
     resourceNames: ["anyuid"]
     resources: ["securitycontextconstraints"]
-    verbs: ["use']
+    verbs: ["use"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
