--- a/playbooks/roles/ocp4_workload_stackrox_demo_apps/files/demos/payments/everything.yaml
+++ b/playbooks/roles/ocp4_workload_stackrox_demo_apps/files/demos/payments/everything.yaml
@@ -195,7 +195,22 @@ metadata:
   namespace: payments
   labels:
     app: mastercard-processor
-
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: mastercard-role
+  namespace: payments
+  labels:
+    app: mastercard-processor
+rules:
+  - apiGroups: [""]
+    resources: ["configmaps"]
+    verbs: ["*"]
+  - apiGroups: ["security.openshift.io"]
+    resourceNames: ["anyuid"]
+    resources: ["securitycontextconstraints"]
+    verbs: ["use"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -206,8 +221,8 @@ metadata:
     app: mastercard-processor
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: cluster-admin
+  kind: Role
+  name: mastercard-role
 subjects:
   - kind: ServiceAccount
     name: mastercard-processor
