--- a/playbooks/roles/ocp4_workload_stackrox_sensor_old/tasks/pre_workload.yml
+++ b/playbooks/roles/ocp4_workload_stackrox_sensor_old/tasks/pre_workload.yml
@@ -15,16 +15,8 @@
   set_fact:
     f_stackrox_central_addr: "{{ r_stackrox_central_route.resources[0].spec.host }}"
 
-- name: Get Admin Password
-  kubernetes.core.k8s_info:
-    kind: Secret
-    api_version: v1
-    namespace: stackrox
-    name: central-htpasswd
-  register: r_stackrox_admin_password
-  retries: 60
-  delay: 20
-
-- name: Store central admin password as a fact
-  set_fact:
-    f_stackrox_admin_password: "{{ r_stackrox_admin_password.resources[0].data.password | b64decode }}"
+# Leave this as the last task in the playbook.
+- name: pre_workload tasks complete
+  debug:
+    msg: "Pre-Workload tasks completed successfully."
+  when: not silent|bool
