--- a/playbooks/roles/ocp4_workload_stackrox_central/templates/central.yaml
+++ b/playbooks/roles/ocp4_workload_stackrox_central/templates/central.yaml
@@ -5,6 +5,8 @@ metadata:
   name: central
 spec:
   central:
+    adminPasswordSecret:
+      name: central-passwd
     exposure:
       loadBalancer:
         enabled: false
