--- a/playbooks/roles/demo/tasks/openshift_policy_fix.yml
+++ b/playbooks/roles/demo/tasks/openshift_policy_fix.yml
@@ -4,7 +4,7 @@
     url: "{{ central_url }}/v1/policies"
     method: GET
     user: admin
-    password: "{{ admin_password }}"
+    password: "{{ f_stackrox_admin_password }}"
     force_basic_auth: true
     validate_certs: no  
   register: policies
@@ -14,7 +14,7 @@
     url: "{{ central_url }}/v1/policies/{{ policies.json.policies | json_query(jmesquery) | first }}"
     method: GET
     user: admin
-    password: "{{ admin_password }}"
+    password: "{{ f_stackrox_admin_password }}"
     force_basic_auth: true
     validate_certs: no  
   vars:
@@ -29,7 +29,7 @@
     body: "{{ lookup('template', 'templates/openshift_policy_fix/policy.json.j2') }}"
     method: PUT
     user: admin
-    password: "{{ admin_password }}"
+    password: "{{ f_stackrox_admin_password }}"
     body_format: json
     force_basic_auth: true
     validate_certs: no
