--- a/playbooks/roles/cluster_sensor/tasks/cluster_bundle.yml
+++ b/playbooks/roles/cluster_sensor/tasks/cluster_bundle.yml
@@ -10,7 +10,7 @@
     body: "{ \"name\": \"prod-{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}\"}"
     method: POST
     user: admin
-    password: "{{ admin_password }}"
+    password: "{{ f_stackrox_admin_password }}"
     body_format: json
     force_basic_auth: true
     validate_certs: no
