--- a/playbooks/roles/pipelines/tasks/main.yml
+++ b/playbooks/roles/pipelines/tasks/main.yml
@@ -34,7 +34,7 @@
     body: '{"name":"pipelines-ci-token","role":null,"roles":["Continuous Integration"]}'
     method: POST
     user: admin
-    password: "{{ admin_password }}"
+    password: "{{ f_stackrox_admin_password }}"
     body_format: json
     force_basic_auth: true
     validate_certs: no
