--- a/playbooks/roles/ocp4_workload_stackrox_central/tasks/workload.yml
+++ b/playbooks/roles/ocp4_workload_stackrox_central/tasks/workload.yml
@@ -8,13 +8,16 @@
 
 - name: Create password secret
   kubernetes.core.k8s:
-    apiVersion: v1
-    kind: Secret
-    metadata:
-      name: central-passwd
-    type: Opaque
-    data:
-      password: "{{ f_stackrox_admin_password }}"
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: central-passwd
+        namespace: openshift-operators
+      type: Opaque
+      data:
+        password: "{{ f_stackrox_admin_password}}"
+    state: present
     
 
 - name: Install Operators
