--- a/playbooks/roles/ocp4_workload_stackrox_central/templates/central.yaml
+++ b/playbooks/roles/ocp4_workload_stackrox_central/templates/central.yaml
@@ -7,6 +7,7 @@ spec:
   central:
     adminPasswordSecret:
       name: central-passwd
+      namespace: openshift-operators
     exposure:
       loadBalancer:
         enabled: false
