Try it this way.

--- a/playbooks/roles/ocp4_workload_stackrox_central/tasks/workload.yml
+++ b/playbooks/roles/ocp4_workload_stackrox_central/tasks/workload.yml
@@ -13,7 +13,7 @@
       kind: Secret
       metadata:
         name: central-passwd
-        namespace: openshift-operators
+        namespace: stackrox
       type: Opaque
       data:
         password: "{{ f_stackrox_admin_password}}"
