--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -19,6 +19,7 @@
         original_central_addr: "{{ lookup('env', 'CENTRAL_ADDR') }}"
         central_addr: "{{ lookup('env', 'CENTRAL_ADDR') }}"
         f_stackrox_admin_password: "{{ lookup('env', 'ADMIN_PASSWORD') }}"
+        ocp4_workload_stackrox_central_admin_password: "{{ f_stackrox_admin_password }}"
         orchestrator: "{{ lookup('env', 'ORCHESTRATOR') }}"
         kubeconfig: "files/kubeconfig"
         auth_client_id: "{{ lookup('env', 'AUTH_CLIENT_ID') }}"
