--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/} | sed 's./.-.g')"
         id: extract_branch
-      - name: Build & push new latest
+      - name: Build & push
         if: ${{ steps.extract_branch.outputs.branch == 'main' }}
         uses: RafikFarhad/push-to-gcr-github-action@v3.0.2
         with:
@@ -17,7 +17,7 @@ jobs:
           registry: us.gcr.io
           project_id: rox-se
           image_name: ansible-demo
-          image_tag: ${{ github.run_number }},latest
+          image_tag: ${{ github.run_number }},3-71-3-rc1
           
       - name: Build Image
         if: ${{ steps.extract_branch.outputs.branch == 'main' }}
@@ -25,7 +25,7 @@ jobs:
         uses: redhat-actions/buildah-build@v2
         with:
           image: ansible-demo
-          tags: ${{ github.run_number }} latest
+          tags: ${{ github.run_number }} 3-71-3-rc1
           dockerfiles: |
             ./Dockerfile
 
