Add ability to set central version for openshift4-demo

--- a/playbooks/roles/central/tasks/central.yml
+++ b/playbooks/roles/central/tasks/central.yml
@@ -18,6 +18,10 @@
   community.kubernetes.helm:
     name: stackrox-central-services
     chart_ref: stackrox/central-services
+{% if centralhelmchartversion != '' %}
+  chart_version: "{{ centralhelmchartversion }}"
+{% endif %}
+    chart_version: 
     release_namespace: stackrox
     values: "{{ lookup('template', 'templates/central.yml.j2') | from_yaml }}"
     kubeconfig: "{{ kubeconfig }}"
