--- a/playbooks/roles/pipelines/files/config/2-rox-generate-netpol-task.yml
+++ b/playbooks/roles/pipelines/files/config/2-rox-generate-netpol-task.yml
@@ -39,7 +39,7 @@ spec:
       script: |
         #!/usr/bin/env bash
         set +x
-        #cat /deployfile/$(params.file)
+        cat /deployfile/$(params.file)
         curl -k -L -H "Authorization: Bearer $ROX_API_TOKEN" https://$ROX_CENTRAL_ENDPOINT/api/cli/download/roxctl-linux --output ./roxctl  > /dev/null; echo "Getting roxctl"
         chmod +x ./roxctl  > /dev/null
         ./roxctl generate netpol /deployfile/$(params.file) 
