--- a/playbooks/roles/demo/tasks/violation_policies.yml
+++ b/playbooks/roles/demo/tasks/violation_policies.yml
@@ -3,11 +3,10 @@
   uri:
     url: "{{ central_url }}/v1/policies/import"
     body: "{{ lookup('file', item ) }}"
+    headers: 
+     Authorization: "Bearer {{ rox_api_token }}"
     method: POST
-    user: admin
-    password: "{{ admin_password }}"
     body_format: json
-    force_basic_auth: true
     validate_certs: no
   with_fileglob:
     - "files/policies/*.json"
