--- a/playbooks/roles/demo/tasks/baseline_processes.yml
+++ b/playbooks/roles/demo/tasks/baseline_processes.yml
@@ -3,9 +3,8 @@
   uri:
     url: "{{ central_url }}/v1/deployments?query=Deployment:\"{{ item }}\""
     method: GET
-    user: admin
-    password: "{{ admin_password }}"
-    force_basic_auth: true
+    headers:
+     Authorization: "Bearer {{ rox_api_token }}"
     validate_certs: no  
   register: deployments
   loop:
@@ -21,9 +20,8 @@
   uri:
     url: "{{ central_url }}/v1/deployments/{{ item }}"
     method: GET
-    user: admin
-    password: "{{ admin_password }}"
-    force_basic_auth: true
+    headers:
+     Authorization: "Bearer {{ rox_api_token }}"
     validate_certs: no  
   register: deployment_details
   loop: "{{ deployment_ids }}"
@@ -33,10 +31,9 @@
     url: "{{ central_url }}/v1/processbaselines"
     body: "{{ lookup('template', 'templates/baseline/baseline.json.j2' ) }}"
     method: PUT
-    user: admin
-    password: "{{ admin_password }}"
+    headers:
+     Authorization: "Bearer {{ rox_api_token }}"
     body_format: json
-    force_basic_auth: true
     validate_certs: no
   loop: "{{ deployment_details.results }}" 
   loop_control:
@@ -47,10 +44,9 @@
     url: "{{ central_url }}/v1/processbaselines/lock"
     body: "{{ lookup('template', 'templates/baseline/lock.json.j2' ) }}"
     method: PUT
-    user: admin
-    password: "{{ admin_password }}"
+    headers:
+     Authorization: "Bearer {{ rox_api_token }}"
     body_format: json
-    force_basic_auth: true
     validate_certs: no
   loop: "{{ deployment_details.results }}" 
   loop_control:
